--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=net.rosemarythmye.simplymore
+mod_version=1.0.1
+maven_group=net.rosemarythyme.simplymore
 archives_base_name=simplymore
 
 # Dependencies
